--- a/index.html
+++ b/index.html
@@ -1,36 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TIC_TAC_GAME</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <div class="box">
-    <h1>Tic Tac Toe</h1>
-
-    <div class="grid">
-        <div class="child">vghh</div>
-        <div  class="child">vghh</div>
-        <div  class="child">vghh</div>
-        <div class="child">vghh</div>
-        <div  class="child">vghh</div>
-        <div  class="child">vghh</div>
-        <div class="child">vghh</div>
-        <div  class="child">vghh</div>
-        <div  class="child">vghh</div>
-      
-    </div>
-
-    <div class="game">
-        current player
-    </div>
-    <div>
-        result
-    </div>
-    <Button>ReStart Game</Button>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Tic-Tac-Toe</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <section>
+            <h1 class="game--title">Tic-Tac-Toe</h1>
+            <div class="game--container">
+                <div data-cell-index="0" class="cell"></div>
+                <div data-cell-index="1" class="cell"></div>
+                <div data-cell-index="2" class="cell"></div>
+                <div data-cell-index="3" class="cell"></div>
+                <div data-cell-index="4" class="cell"></div>
+                <div data-cell-index="5" class="cell"></div>
+                <div data-cell-index="6" class="cell"></div>
+                <div data-cell-index="7" class="cell"></div>
+                <div data-cell-index="8" class="cell"></div>
+            </div>
+            <h2 class="game--status"></h2>
+            <button class="game--restart">Restart Game</button>
+        </section>
+        <script src="index.js"></script>
+    </body>
 </html>
